--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,14 +25,16 @@ body{
 
 .button-blue{
     background-color: #0061ff;
-    padding: 7px 12px;
+    padding: 10px 20px;
     color: white;
     border: 0;
     font-size: 13px;
 }
 
-.large-button{
+.button-white{
     padding: 10px 20px;
+    background-color: white;
+    border: 1px solid black;
 }
 
 .center{
@@ -41,10 +43,6 @@ body{
 
 .margin-top{
     margin-top: 20px;
-}
-
-.margin-right{
-    margin-right: 5px;
 }
 
 .margin-20{
@@ -59,6 +57,10 @@ body{
     padding: 10px 25px;
 }
 
+.padding-top{
+    padding: 10px 0;
+}
+
 .small-font{
     font-size: 13px;
 }
@@ -69,26 +71,45 @@ body{
 
 ul li{
     list-style-type: none;
+    padding: 10px 0;
 }
-
 
 /* Header */
 
 header{
+    position: fixed;
+    right: 0;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: white;
+    height: 60px;
+    line-height: 60px;
+}
+
+nav{
     justify-content: space-between;
 }
 
-header .logo{
+header nav .logo{
     vertical-align: middle;
     height: 20px;
 }
 
-header span{
+header nav span{
     padding: 0 15px;
 }
 
 header .box-1, .box-2{
-    padding: 18px 15px;
+    padding: 0 15px;
+}
+
+nav span{
+    display: inline-block;
+}
+
+header span:hover{
+    border-bottom: 1px solid black;
 }
 
 /* Main */
@@ -97,17 +118,18 @@ header .box-1, .box-2{
 
 .section-1{
     background-color: #b4d0e7;
-    max-height: 510px;
 }
 
 .section-1 > .container-1{
     width: 65%;
+    position: relative;
+    top: 50px;
 }
 
 .container-1 > h1{
     font-size: 60px;
     font-family: 'Roboto', sans-serif;
-    padding: 60px 0 20px 0;
+    padding: 80px 0 20px 0;
 }
 
 .container-1 img{
@@ -130,8 +152,28 @@ header .box-1, .box-2{
     height: 780px;
 }
 
+.selection{
+    padding-right: 30px;
+}
+
+.container-2 .circle{
+    display: inline-block;
+    padding: 6px;
+    border-radius: 50%;
+    vertical-align: top;
+}
+
+.container-2 .circle-1{
+    outline: 3px solid #0061ff;
+    outline-offset: -2px;
+}
+
+.container-2 .circle-2{
+    border: 1px solid lightgray;
+}
+
 .container-2 span{
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 .fa-solid.fa-circle-dot{
@@ -143,7 +185,6 @@ header .box-1, .box-2{
 }
 
 .column{
-    margin: 0 15px;
     height: 100%;
     border: 1px solid lightgrey;
 }
@@ -153,7 +194,7 @@ header .box-1, .box-2{
 }
 
 .flex-basis{
-    flex-basis: calc(100% / 3);
+    flex-basis: calc((100% / 3) - 3%);
 }
 
 .part-top{
@@ -166,17 +207,51 @@ hr{
     color: lightgrey;
 }
 
+.fa-solid.fa-check{
+    color: #0061ff;
+}
+
 /* Section-3 */
 
 .container-3{
     border: 1px solid lightgrey;
-
 }
 
 .card-1{
     width: 70%;
 }
 
+.card-1 > p{
+    margin: 40px 0 20px 0;
+}
+
 .card-2{
     width: 30%;
+    position: relative;
 }
+
+.card-2 > button{
+    position: absolute;
+    right: 0;
+    top: 10px;
+} 
+
+/* Section-4 */
+
+.section-4{
+    margin: 100px 0;
+}
+
+.card-left{
+    flex-basis: 60%;
+}
+
+.card-left > img{
+    display: block;
+    width: 100%;
+}
+
+.card-right{
+    flex-basis: 34%;
+}
+
