--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,18 @@ body{
     font-size: 13px;
 }
 
+.button-blue:hover{
+    opacity: 0.7;
+}
+
 .button-white{
     padding: 10px 20px;
     background-color: white;
     border: 1px solid black;
+}
+
+.button-white:hover{
+    color: grey;
 }
 
 /* Margin, padding */
@@ -157,6 +165,7 @@ header span:hover{
 .fa-solid.fa-arrow-down{
     font-size: 40px;
     margin-top: 30px;
+    color: black;
 }
 
 /* Section-2 */
@@ -166,11 +175,11 @@ header span:hover{
     margin-bottom: 50px;
 }
 
-.columns{
+.container-2 > .columns{
     height: 780px;
 }
 
-.selection{
+.container-2 .selection{
     padding-right: 30px;
 }
 
@@ -300,22 +309,31 @@ header span:hover{
 
 .container{
     flex-basis: calc(100% / 3);
+    aspect-ratio: 1;
     flex-wrap: wrap;
 }
 
 .square{
-    height: 210px;
-    flex-basis: calc(100% / 2);
+    width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .center-container{
     background-color: #f5f5f5;
     padding: 40px;
+    overflow: auto;
 }
 
 .section-7 hr{
     width: 80px;
     margin: 30px 0;
+}
+
+.square > img{
+    filter: invert();
 }
 
 .square.square-1{
@@ -350,4 +368,99 @@ header span:hover{
 
 .square.square-8{
     background-color: #ffd830;
+}
+
+/* Section-8 */
+
+.section-8{
+    background-color: #b4d0e7;
+}
+
+.section-8 .case{
+    padding: 80px 0;
+    flex-basis: calc((100% / 2) - 2%);
+}
+
+.case-1 > h2{
+    color: #600028;
+}
+
+.case-2{
+    text-align: center;
+}
+
+.case-2 > button{
+    border: 0;
+}
+
+/* Section-9 */
+
+.general-box{
+    padding: 70px 0;
+}
+
+.general-box > h2{
+    padding: 40px 0;
+    border-bottom: 1px solid grey;
+}
+
+.general-box > div{
+    padding: 30px 0;
+    border-bottom: 1px solid grey;
+    position: relative;
+}
+
+.general-box p{
+    font-size: 13px;
+}
+
+.fa-solid.fa-chevron-down{
+    position: absolute;
+    font-size: 13px;
+    right: 15px;
+    top: 30px;
+}
+
+.invisible{
+    display: none;
+    padding-top: 5px;
+}
+
+.general-box div:hover .invisible{
+    display: block;
+}
+
+/* Footer */
+
+footer{
+    background-color: black;
+}
+
+.cols{
+    width: 70%;
+    color: white;
+    padding: 60px 0;
+}
+
+.cols ul li{
+    padding: 5px 0;
+    font-size: 13px;
+}
+
+.last-box{
+    width: 70%;
+    color: lightgray;
+}
+
+.last-box hr{
+    width: 100px;
+    color: lightgrey;
+}
+
+.last-box span{
+    padding: 40px 0 40px 7px;
+}
+
+.last-box i{
+    padding: 40px 0;
 }
